Use javafx-maven-plugin instead of jlink